--- a/bloco_3/dia_4/Exercício_dia4.html
+++ b/bloco_3/dia_4/Exercício_dia4.html
@@ -3,11 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
-    <title>Exercício dia 4</title>> 
+    <title>Exercício dia 4</title> 
   </head>
   <body>
     <header>
       <h1>Soco a 80km/h: Conheça o Stomatopoda</h1>
     </header>
+    <nav>
+      <ul>
+        <li><a href="#">Página Inicial</a></li>
+        <li><a href="#">Sobre</a></li>
+        <li><a href="#">Contato</a></li>
+      </ul>
+    </nav>
   </body>
 </html>
