Adicionando a seção de artigo no site

--- a/bloco_3/dia_4/Exercício_dia4.html
+++ b/bloco_3/dia_4/Exercício_dia4.html
@@ -15,6 +15,18 @@
         <li><a href="#">Sobre</a></li>
         <li><a href="#">Contato</a></li>
       </ul>
+      <article>
+        <h2>Fatos sobre o Stomatopoda</h2>
+        <p>
+          Stomatopoda (ou estomatópode), chamados popularmente de tamarutacas ou de lacraias-do-mar no Brasil, é uma ordem de crustáceos marinhos da subclasse Hoplocarida, que agrupa cerca de 400 espécies, caracterizadas principalmente pela morfologia da segunda pata torácica, que é modificada em apêndice subquelado, lembrando uma pata de louva-a-deus.
+        </p>
+        <p>
+          Os estomatópodes são predadores ativos que caçam presas com o auxílio de um sentido de visão muito apurado e capaz de interpretar polarização no espectro ultravioleta e infravermelho). Apresentam uma grande variação de tamanho, que pode ir de poucos milímetros até aproximadamente 40 cm nas espécies maiores.
+        </p>
+        <p>
+          Eles vivem em fundo consolidado, lodoso ou ainda arenoso, onde cavam seus buracos ou aproveitam-se dos orifícios deixados por outros animais para neles se instalar. São animais exclusivamente carnívoros, alimentando-se de camarões, caranguejos, moluscos, peixes e até mesmo outros da mesma ordem.
+        </p>
+      </article>
     </nav>
   </body>
 </html>
