--- a/bloco_3/dia_4/Exercício_dia4.html
+++ b/bloco_3/dia_4/Exercício_dia4.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
+    <link rel="stylesheet" type="text/css" href="style.css" media="screen" /> 
     <title>Exercício dia 4</title> 
   </head>
   <body>
@@ -17,15 +18,30 @@
       </ul>
       <article>
         <h2>Fatos sobre o Stomatopoda</h2>
-        <p>
-          Stomatopoda (ou estomatópode), chamados popularmente de tamarutacas ou de lacraias-do-mar no Brasil, é uma ordem de crustáceos marinhos da subclasse Hoplocarida, que agrupa cerca de 400 espécies, caracterizadas principalmente pela morfologia da segunda pata torácica, que é modificada em apêndice subquelado, lembrando uma pata de louva-a-deus.
-        </p>
-        <p>
-          Os estomatópodes são predadores ativos que caçam presas com o auxílio de um sentido de visão muito apurado e capaz de interpretar polarização no espectro ultravioleta e infravermelho). Apresentam uma grande variação de tamanho, que pode ir de poucos milímetros até aproximadamente 40 cm nas espécies maiores.
-        </p>
-        <p>
-          Eles vivem em fundo consolidado, lodoso ou ainda arenoso, onde cavam seus buracos ou aproveitam-se dos orifícios deixados por outros animais para neles se instalar. São animais exclusivamente carnívoros, alimentando-se de camarões, caranguejos, moluscos, peixes e até mesmo outros da mesma ordem.
-        </p>
+        <section>
+          <h3>Classificação científica</h3>
+          <p>Nome científico: <span class="scientific-name">Odontodactylus scyllarus</span></p>
+          <p>
+            Reino:	Animalia<br>
+            Filo:	Arthropoda<br>
+            Subfilo:	Crustacea<br>
+            Classe:	Malacostraca<br>
+            Subclasse:	Hoplocarida<br>
+            Ordem:	Stomatopoda (Latreille, 1817)
+          </p>
+        </section>
+        <section>
+          <h3>Como são conhecidos?</h3>
+          <p>Stomatopoda (ou estomatópode), chamados popularmente de <strong>tamarutacas</strong> ou de <strong>lacraias-do-mar</strong> no Brasil, é uma ordem de crustáceos marinhos da subclasse Hoplocarida, que agrupa cerca de 400 espécies, caracterizadas principalmente pela morfologia da segunda pata torácica, que é modificada em apêndice subquelado, lembrando uma pata de louva-a-deus.</p>
+        </section>
+        <section>
+          <h3>Como eles são?</h3>
+          <p>Os estomatópodes são predadores <strong>ativos</strong> que caçam presas com o auxílio de um sentido de visão muito apurado e capaz de interpretar polarização no espectro ultravioleta e infravermelho). Apresentam uma grande variação de tamanho, que pode ir de poucos milímetros até aproximadamente 40 cm nas espécies maiores.</p>
+        </section>
+        <section>
+          <h3>Onde eles vivem?</h3>
+          <p>Eles vivem em fundo consolidado, <strong>lodoso</strong> ou ainda <strong>arenoso</strong>, onde cavam seus buracos ou aproveitam-se dos orifícios deixados por outros animais para neles se instalar. São animais exclusivamente carnívoros, alimentando-se de camarões, caranguejos, moluscos, peixes e até mesmo outros da mesma ordem.</p>
+        </section>
       </article>
     </nav>
   </body>
