Adicionando a área adjancente no site e o rodapé

--- a/bloco_3/dia_4/Exercício_dia4.html
+++ b/bloco_3/dia_4/Exercício_dia4.html
@@ -16,7 +16,8 @@
         <li><a href="#">Sobre</a></li>
         <li><a href="#">Contato</a></li>
       </ul>
-      <article>
+    </nav>
+    <article>
         <h2>Fatos sobre o Stomatopoda</h2>
         <section>
           <h3>Classificação científica</h3>
@@ -76,7 +77,12 @@
           <li><a target="_blank" href="https://theoatmeal.com/comics/mantis_shrimp">theoatmeal.com</a></li>
           </ul>
         </section>
-      </article>
-    </nav>
+    </article>
+    <aside>
+      <iframe width="300" src="https://www.youtube.com/embed/E0Li1k5hGBE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </aside>
+    <footer>
+      <p>Conteúdo compilado por Daniel Duarte - Turma 07</p>
+    </footer>
   </body>
 </html>
