Adicionando estilo a página e enviando a css

--- a/bloco_3/dia_4/Exercício_dia4.html
+++ b/bloco_3/dia_4/Exercício_dia4.html
@@ -8,79 +8,88 @@
   </head>
   <body>
     <header>
-      <h1>Soco a 80km/h: Conheça o Stomatopoda</h1>
+      <section>
+        <h1>Soco a 80km/h: Conheça o Stomatopoda</h1>
+      </section>
+      <nav class="Nav">
+        <ul class="top-menu">
+          <li class="top-menu-li"><a href="#">Página Inicial</a></li>
+          <li class="top-menu-li"><a href="#">Sobre</a></li>
+          <li class="top-menu-li"><a href="#">Contato</a></li>
+        </ul>
+      </nav>
     </header>
-    <nav>
-      <ul>
-        <li><a href="#">Página Inicial</a></li>
-        <li><a href="#">Sobre</a></li>
-        <li><a href="#">Contato</a></li>
-      </ul>
-    </nav>
-    <article>
-        <h2>Fatos sobre o Stomatopoda</h2>
-        <section>
-          <h3>Classificação científica</h3>
-          <p>Nome científico: <span class="scientific-name">Odontodactylus scyllarus</span></p>
-          <p>
-            <table>
-              <tr>
-                <th>Categoria: </th>
-                <th>Nome da categoria</th>
-              </tr>
-              <tr>
-                <td>Reino: </td>
-                <td>Animalia</td>
-              </tr>
-              <tr>
-                <td>Filo: </td>
-                <td>Arthropoda</td>
-              </tr>
-              <tr>
-                <td>Subfilo: </td>
-                <td>Crustacea</td>
-              </tr>
-              <tr>
-                <td>Classe: </td>
-                <td>Malacostraca</td>
-              </tr>
-              <tr>
-                <td>Subclasse: </td>
-                <td>Hoplocarida</td>
-              </tr>
-              <tr>
-                <td>Ordem: </td>
-                <td>Stomatopoda (Latreile, 1817)</td>
-              </tr>
-            </table>
-          </p>
-        </section>
-        <section>
-          <h3>Como são conhecidos?</h3>
-          <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b5/Odontodactylus_scyllarus1.jpg/250px-Odontodactylus_scyllarus1.jpg" alt="Stomatopa em seu habitat natural">
-          <p>Stomatopoda (ou estomatópode), chamados popularmente de <strong>tamarutacas</strong> ou de <strong>lacraias-do-mar</strong> no Brasil, é uma ordem de crustáceos marinhos da subclasse Hoplocarida, que agrupa cerca de 400 espécies, caracterizadas principalmente pela morfologia da segunda pata torácica, que é modificada em apêndice subquelado, lembrando uma pata de louva-a-deus.</p>
-        </section>
-        <section>
-          <h3>Garras</h3>
-          <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/26/Squilla_mantis.jpg/220px-Squilla_mantis.jpg" alt="Squilla mantis , mostrando os apêndices de lança">
-          <p>O segundo par de apêndices torácicos do camarão mantis foi altamente adaptado para o combate de curta distância. As diferenças de apêndice dividem o camarão mantis em dois tipos principais: aqueles que caçam empalando suas presas com estruturas semelhantes a lanças e aqueles que esmagam a presa com um golpe poderoso de um apêndice semelhante a um clube fortemente mineralizado. </p>
-        </section>
-        <section>
-          <h3>Olhos</h3>
-          <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9c/Mantis_Shrimp_Eyes.JPG/220px-Mantis_Shrimp_Eyes.JPG" alt="Close de um camarão mantis mostrando a estrutura dos olhos">
-          <p>Os olhos do camarão mantis são montados em caules móveis e podem se mover independentemente uns dos outros. Acredita-se que eles tenham os olhos mais complexos do reino animal e o sistema visual mais complexo já descoberto. Comparado aos três tipos de células fotorreceptoras que os humanos possuem em seus olhos, os olhos de um camarão mantis têm entre 12 e 16 tipos de células fotorreceptoras.</p>
-        </section>
-        <section>
-          <h3>Referências bibliográficas</h3>
-          <ul>
-          <li><a target="_blank" href="https://pt.wikipedia.org/wiki/Stomatopoda#:~:text=Stomatopoda%20(ou%20estomat%C3%B3pode)%2C%20chamados,modificada%20em%20ap%C3%AAndice%20subquelado%2C%20lembrando">pt.wikipedia.org</a></li>
-          <li><a target="_blank" href="https://theoatmeal.com/comics/mantis_shrimp">theoatmeal.com</a></li>
-          </ul>
-        </section>
-    </article>
-    <aside>
-      <iframe width="300" src="https://www.youtube.com/embed/E0Li1k5hGBE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    </aside>
+
+    <section class="content">
+      <article class="content-article">
+          <h2>Fatos sobre o Stomatopoda</h2>
+
+          <section class="content-item">
+            <h3>Como são conhecidos?</h3>
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b5/Odontodactylus_scyllarus1.jpg/250px-Odontodactylus_scyllarus1.jpg" alt="Stomatopa em seu habitat natural">
+            <p>Stomatopoda (ou estomatópode), chamados popularmente de <strong>tamarutacas</strong> ou de <strong>lacraias-do-mar</strong> no Brasil, é uma ordem de crustáceos marinhos da subclasse Hoplocarida, que agrupa cerca de 400 espécies, caracterizadas principalmente pela morfologia da segunda pata torácica, que é modificada em apêndice subquelado, lembrando uma pata de louva-a-deus.</p>
+          </section>
+          <section class="content-item">
+            <h3>Garras</h3>
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/26/Squilla_mantis.jpg/220px-Squilla_mantis.jpg" alt="Squilla mantis , mostrando os apêndices de lança">
+            <p>O segundo par de <strong>apêndices</strong> torácicos do camarão mantis foi <strong>altamente adaptado</strong> para o combate de curta distância. As diferenças de apêndice dividem o camarão mantis em dois tipos principais: aqueles que caçam empalando suas presas com estruturas semelhantes a lanças e aqueles que esmagam a presa com um golpe poderoso de um apêndice semelhante a um clube fortemente mineralizado. </p>
+          </section>
+          <section class="content-item">
+            <h3>Olhos</h3>
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9c/Mantis_Shrimp_Eyes.JPG/220px-Mantis_Shrimp_Eyes.JPG" alt="Close de um camarão mantis mostrando a estrutura dos olhos">
+            <p>Os olhos do camarão mantis são montados em caules móveis e podem se mover independentemente uns dos outros. Acredita-se que eles tenham os olhos mais complexos do reino animal e o sistema visual mais complexo já descoberto. Comparado aos três tipos de células fotorreceptoras que os humanos possuem em seus olhos, os olhos de um camarão mantis têm entre 12 e 16 tipos de células fotorreceptoras.</p>
+          </section>
+          <section class="content-item" class="content-table">
+            <h3>Classificação científica</h3>
+            <p class="scientific">Nome científico: <span class="scientific-name">Odontodactylus scyllarus</span></p>
+            <p>
+              <table>
+                <tr>
+                  <th>Categoria: </th>
+                  <th>Nome da categoria</th>
+                </tr>
+                <tr>
+                  <td>Reino: </td>
+                  <td>Animalia</td>
+                </tr>
+                <tr>
+                  <td>Filo: </td>
+                  <td>Arthropoda</td>
+                </tr>
+                <tr>
+                  <td>Subfilo: </td>
+                  <td>Crustacea</td>
+                </tr>
+                <tr>
+                  <td>Classe: </td>
+                  <td>Malacostraca</td>
+                </tr>
+                <tr>
+                  <td>Subclasse: </td>
+                  <td>Hoplocarida</td>
+                </tr>
+                <tr>
+                  <td>Ordem: </td>
+                  <td>Stomatopoda (Latreile, 1817)</td>
+                </tr>
+              </table>
+            </p>
+          </section>
+
+
+          <section>
+            <h3>Referências bibliográficas</h3>
+            <ul>
+            <li><a target="_blank" href="https://pt.wikipedia.org/wiki/Stomatopoda#:~:text=Stomatopoda%20(ou%20estomat%C3%B3pode)%2C%20chamados,modificada%20em%20ap%C3%AAndice%20subquelado%2C%20lembrando">https://pt.wikipedia.org/wiki/Stomatopoda#:~:text=Stomatopoda%20(ou%20estomat%C3%B3pode)%2C%20chamados,modificada%20em%20ap%C3%AAndice%20subquelado%2C%20lembrando</a></li>
+            <li><a target="_blank" href="https://theoatmeal.com/comics/mantis_shrimp">https://theoatmeal.com/comics/mantis_shrimp</a></li>
+            </ul>
+          </section>
+      </article>
+      <aside class="content-side">
+        <h3>Assista a esse vídeo do Stomatopoda em ação:</h3>
+        <iframe width="500" height="350" src="https://www.youtube.com/embed/E0Li1k5hGBE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      </aside>
+    </section>
     <footer>
       <p>Conteúdo compilado por Daniel Duarte - Turma 07</p>
     </footer>
