Adicioando uma div com classe main-content ao elemento body

--- a/INTRODUÇÃO/BLOCO_5/DIA_2/exDia2.html
+++ b/INTRODUÇÃO/BLOCO_5/DIA_2/exDia2.html
@@ -61,6 +61,9 @@
       let h1Element = document.createElement("h1");
       h1Element.innerText = "Exercício 5.2 - JavaScript DOM";
       bodyElement.appendChild(h1Element);
+      let divMainContent = document.createElement("div");
+      divMainContent.className = "main-content";
+      bodyElement.appendChild(divMainContent);
     </script>
   </body>
 </html>
