Inserindo uma img na div left-content

--- a/INTRODUÇÃO/BLOCO_5/DIA_2/exDia2.html
+++ b/INTRODUÇÃO/BLOCO_5/DIA_2/exDia2.html
@@ -76,6 +76,10 @@
       divRightContent.className = "right-content";
       divMainContent.appendChild(divLeftContent);
       divMainContent.appendChild(divRightContent);
+      let imgElement = document.createElement("img");
+      imgElement.src = "https://picsum.photos/200";
+      imgElement.className = "small-image";
+      divLeftContent.appendChild(imgElement);
     </script>
   </body>
 </html>
