Adicionando elementos h3 a div main-content

--- a/INTRODUÇÃO/BLOCO_5/DIA_2/exDia2.html
+++ b/INTRODUÇÃO/BLOCO_5/DIA_2/exDia2.html
@@ -88,6 +88,10 @@
         ulElement.appendChild(ulItem);
       }
       divRightContent.appendChild(ulElement);
+      for (let i = 0; i < 3; i += 1) {
+        let h3Element = document.createElement("h3");
+        divMainContent.appendChild(h3Element);
+      }
     </script>
   </body>
 </html>
